Use StandardCharsets constant instead of "utf-8" literal (#1678)
GitOrigin-RevId: bac503909acf70132e910a473f462fc4b9827e0e