@@ -16,11 +16,10 @@
 
 package com.hazelcast.internal.ascii.memcache;
 
-import com.hazelcast.core.HazelcastException;
 import com.hazelcast.internal.ascii.TextCommandServiceImpl;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 
 import static com.hazelcast.internal.ascii.TextCommandConstants.NOT_STORED;
 import static com.hazelcast.internal.ascii.TextCommandConstants.TOUCHED;
@@ -34,11 +33,7 @@ public class TouchCommandProcessor extends MemcacheCommandProcessor<TouchCommand
     @Override
     public void handle(TouchCommand touchCommand) {
         String key;
-        try {
-            key = URLDecoder.decode(touchCommand.getKey(), "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new HazelcastException(e);
-        }
+        key = URLDecoder.decode(touchCommand.getKey(), StandardCharsets.UTF_8);
         String mapName = DEFAULT_MAP_NAME;
         int index = key.indexOf(':');
         if (index != -1) {
